--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
   align-items: center;
   justify-content: space-between;
   max-width: 100vw;
-  padding: 20px 20px;
+  padding: 20px 30px;
 }
 /* NAVBAR */
 .logoCircle>img {
@@ -30,29 +30,29 @@ header {
   cursor: pointer;
 }
 
-li {
+.navMenu {
+  display: flex;
+  font-size: 14px;
+  justify-content: right;
+}
+.navMenu li {
   list-style: none;
   display: inline-block;  
   padding: 5px;
 }
+
 a {
   text-decoration: none;
   color: #6a6a72;
+  
 }
+
 #nav-bar ul li a:hover{
   color: blue;
 }
 
 .contactUs {
-  background-color: #072ac8;
-  color: #f2f4fc;
-  font-size: 1em;
-  padding: 10px 30px;
-  text-decoration: none;
-  cursor: pointer;
   display: none;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
 }
 
 /*    HERO SECTION    */
@@ -76,22 +76,26 @@ a {
 }
 
 .heroTitle h1{
-  color: #072ac8;
+  text-align: center;
+  line-height: 130%;
   margin: 20px 0 30px 0;
-  font-size: 2em;
+  font-weight: bold;
+  font-size: 1.8em;
 }
 
 .heroParagraph {
-  color: #6a6a72;
+  font-weight: 400;
   font-size: 1em;
+  line-height: 160%;
+  color: #6b788d;
   margin-bottom: 40px;
 }
 
 .meetUs {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .getInTouchButton {
@@ -106,6 +110,7 @@ a {
 
 .seeOurWorkButton {
   font-size: 18px;
+  font-weight: 500;  
   color: #6a6a72;
   text-decoration: none;
 }
@@ -115,10 +120,15 @@ a {
 }
 
 .heroImage {
+  width: 80vw;
   margin-top: 40px;
 }
 
-.card1, .card2 {
+.card1 {
+  display: none;
+}
+
+.card2 {
   display: none;
 }
 
@@ -127,64 +137,114 @@ a {
 /*---------------------*/
 /*    SCREEN   @ */
 @media (min-width: 1024px) {
-header {
-  margin-top: 30px;
-  width: 97vw;
+
+  /*    HEADER   @ */  
+header { /*    listo   @ */ 
+  margin-top: 40px;
+  width: 95vw;
+  padding: 60px 200px 0 200px;
 }
 
-/*    HEADER   @ */
-  .contactUs {
-    display: block;
-    transition: 0.5s;
+/*    NAVBAR   @ */ 
+#nav-bar { /*    listo   @ */ 
+  position: static;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f2f4fc;
+  top: 0;
+  width: 100%;
+  margin: auto;
+  margin-left: 30px;
+  transition: 0s;
+  height: auto;
+}
+
+.navMenu { /*    listo   @ */ 
+  display: flex;
+  gap: 60px;  
+}
+
+.menu { /*    listo   @ */ 
+  margin: auto;
+
+}
+
+.contactUs { /*    listo   @ */ 
+  display: block;
+  transition: 0.5s;
+  background-color: #072ac8;
+  color: #f2f4fc;
+  font-size: 1em;
+  padding: 10px 15px;
+  text-decoration: none;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  width: 150px;
   }
 
-/*    HERO SECTION  @  */
-.heroSection {
-  padding: 60px 0 0 0;
+
+/*    MAIN   @ */
+main {/*    listo   @ */ 
+  width: 95vw;
+  margin: auto;
 }
-.heroContainer {
+
+/*    HERO SECTION  @  */
+.heroSection { /*    listo   @ */ 
+  padding: 60px 200px 0 200px;
+}
+.heroContainer { /*    listo   @ */ 
   align-items: center;
   flex-direction: row;
   display: flex;
   justify-content: space-between;
 }
-.heroTitle {
+.heroTitle h1 {/*    listo   @ */ 
+  text-align: left;
+}
+.heroTitle { /*    listo   @ */ 
   display: flex;
-  text-align: left;
   justify-content: left;
-  align-items: left;
   flex-direction: column;
-}
-.heroParagraph {
-  width: auto;
-  font-size: 1em;
+  align-items: left;
   text-align: left;
 }
-.meetUs {
-  align-items: left;
-  flex-direction: row-reverse;
+.heroParagraph { /*    listo   @ */ 
+  width: auto;
+  font-size: 1.25em;
+  text-align: left;
+  padding-right: 35px;
+}
+.meetUs { /*    listo   @ */ 
+  flex-direction: row;
   justify-content: left;
+  align-items: left;
+  align-self: flex-start;
 }
-.heroImage {
-  width: 450px;
+.heroImage { /*    listo   @ */ 
+  width: 400px;
 }
-.card1 {
-  top: 30px;
-  bottom: auto;
-  right: auto;
-  width: 300px;
-  height: 300px;
+h1 { /*pendiente  OJO */
+  font-size: ;
+}
+.card1 { /*    listo   @ */ 
+  top: 210px;
   display: block;
+  width: 250px;
+  height: auto;
   position: absolute;
+  right: 430px;
 }
-.card1 {
+
+.card2 {
   width: 300px;
-  height: 300px;
+  height: auto;
   position: absolute;
+  bottom: -100px;
   left: 200px;
 }
-
-
 
 
 }
