--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,35 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 /* ------- mobile ------- */
 /* BODY */
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #f2f4fc;
-  line-height: 20px;
+  background-color: #F2F4FC;
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   color: #072ac8;
 }
-/* HEADER */
+
+/* HEADER     -- mobile --*/
 header {
-  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 100vw;
   padding: 20px 30px;
 }
-/* NAVBAR */
-.logoCircle>img {
+
+/* MAIN    -- mobile -- */
+
+main {
+  margin: 10px;
+}
+
+
+/* NAVBAR    -- mobile -- */
+.logoCircle img {
   width: 60px;
   height: 18px;
   cursor: pointer;
@@ -35,19 +40,20 @@ header {
   font-size: 14px;
   justify-content: right;
 }
+
 .navMenu li {
   list-style: none;
-  display: inline-block;  
+  display: inline-block;
   padding: 5px;
 }
 
 a {
   text-decoration: none;
   color: #6a6a72;
-  
+
 }
 
-#nav-bar ul li a:hover{
+#nav-bar ul li a:hover {
   color: blue;
 }
 
@@ -55,9 +61,9 @@ a {
   display: none;
 }
 
-/*    HERO SECTION    */
+/*    HERO SECTION  -- mobile --  */
 .heroSection {
-    padding: 0 30px;
+  padding: 0 30px;
 }
 
 .heroContainer {
@@ -75,7 +81,7 @@ a {
   text-align: center;
 }
 
-.heroTitle h1{
+.heroTitle h1 {
   text-align: center;
   line-height: 130%;
   margin: 20px 0 30px 0;
@@ -110,7 +116,7 @@ a {
 
 .seeOurWorkButton {
   font-size: 18px;
-  font-weight: 500;  
+  font-weight: 500;
   color: #6a6a72;
   text-decoration: none;
 }
@@ -132,259 +138,683 @@ a {
   display: none;
 }
 
-/*    CLIENT SECTION    */
+/*    CLIENT SECTION  -- mobile --  */
 .clientSection {
-  padding: 0 30px;
+  /* listo */
   margin-top: 50px;
 }
 
 .clientLogo {
+  /* listo */
   filter: grayscale(1);
-  margin: 10px 0;
 }
 
 .logosContainer {
+  /* listo */
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .logosContainer img {
+  /* listo */
   width: 90px;
   height: auto;
   margin: 5px;
 }
 
-/* CLIENT SECTION */
-/*      PROJECT SECTION        */
+/* CLIENT SECTION      -- mobile --*/
+/*      PROJECT SECTION    -- mobile --    */
 
-/* .fieldset {
+.projectSection {
+  margin-top: 70px;
+}
+
+.projectSection h2 {
+  color: #353030;
+  text-align: left;
+  font-size: 1.4em;
+  line-height: 2px;
+}
+
+.articlesContainer {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: auto;
+  grid-column-gap: 40px;
+  grid-row-gap: 16px;
+  text-align: left;
+}
+
+.articleDetails {
+  width: auto;
+  background-color: #ffffff;
+}
+
+.styleImg { /* listo */
+  line-height: normal;
+  width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.boxInfo { /* listo */
+  color: #6b708d;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.textH3 { /* listo */
+  color: #292E47;
+  font-size: 1em;
+  margin-bottom: 10px;
+}
+
+.paragrahP { 
+  font-size: small;
+  line-height: 2px;
+  height: 45px;
+}
+
+.learnMore {
+  text-decoration: none;
+  color: #072AC8;
+}
+
+/* PROJECT SECTION     -- mobile -- */
+/* TESTIMONIAL SECTION     -- mobile -- */
+
+.testimonialSection {
+  margin-top: 100px;
+  position: relative;
+}
+
+.emoji1 {
+  width: 60px;
+  height: auto;
+  display: block;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+ }
+
+ .emoji2 {
+  width: 60px;
+  height: auto;
+  display: block;
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
+ }
+
+ .emoji3 {
+  width: 60px;
+  height: auto;
+  display: block;
+  position: absolute;
+  right: 0%;
+  top: 0%;
+ }
+
+ .emoji4 {
+  width: 60px;
+  height: auto;
+  display: block;
+  position: absolute;
+  right: 0%;
+  bottom: 0%;
+ }
+
+.client {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.testimonialSection {
+  margin-bottom: 100px;
+}
+
+.testimonialContainer {
+  padding: 50px 30px;
+  background-color: #292E47;
+  background-image: url("../images/testimonial-section/orbit.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.opinions {
+  color: #f2f4fc;
+  font-size: 1.8em;
+  line-height: 1.5em;
+}
+
+.opinionClient {
+  max-width: 560px;
+  color: #FFC600;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-weight: 500;
+  margin-top: 30px;
+  font-size: 24px;
+  line-height: 160%;
+}
+
+.clientId {
+  display: table-row;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.textH4 {
+  margin-left: 15px;
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+}
+
+.watson {
+  height: 30px;
+  color: #a2d6f9;
+  font-size: 1.1em;
+}
+
+.booking {
+  text-align: center;
+  color: #f2f4fc;
+}
+
+/* TESTIMONIAL SECTION end    -- mobile -- */
+/* SERVICES SECTION   ini  -- mobile -- */
+
+.iconServices1 {
+  background-image: url(../images/services-section/icons/1.svg);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  background-color: #ecf7ff;
+  margin-top: 15px;
+  margin-left: 15px;
+  padding-bottom: 0px;
+}
+
+.iconServices2 {
+  background-image: url(../images/services-section/icons/2.svg);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  background-color: #ecf7ff;
+  margin-top: 15px;
+  margin-left: 15px;
+  padding-bottom: 0px;
+}
+
+.iconServices3 {
+  background-image: url(../images/services-section/icons/3.svg);
+  background-position: 50% 50%;
+  background-size: auto;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  background-color: #ecf7ff;
+  margin-top: 15px;
+  margin-left: 15px;
+  padding-bottom: 0px;
+}
+
+.paragrahk {
+  font-size: small;
+  height: 45px; 
+}
+/* SERVICES SECTION    end -- mobile -- */
+/* CTA SECTION    ini -- mobile -- */
+
+.ctaSection {
+  margin-top: 100px;
+}
+
+ .preFooterSection {
+  background-color: #FFC600;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 30px;
+ }
+
+ .anyQuestion {
+  color: #292E47;
+  margin-bottom: 20px;
+  font-size: 1.5em;
+  line-height: 1em;
+}
+
+.footerSection p {
+  color: #3c3f52;
+  font-size: 1.2em;
+  line-height: 20px;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+
+.enterEmail {
+  position: relative;
+}
+
+.envelopIcon {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: 20%;
+  top: 10%;
+  right: auto;
+  bottom: auto;
+}
+
+#email {
+  line-height: 1.5em;
+  height: 30px;
+  padding: 12px 12px 12px 45px;
+  text-align: center;
+  font-size: 0.9em;
   border: none;
+}
+
+#submit {
+  margin-top: 20px;
+  color: #ffffff;
+  background-color: #072AC8;
+  padding: 20px 45px;
+  font-weight: 500;
+  border: none;
+  font-size: 1em;
+}
+
+#submit:hover {
+  background-color: #455497;
+}
+/* CTA SECTION    end -- mobile -- */
+/* FOOTER SECTION    ini -- mobile -- */
+.footerSection {
+  margin-top: 60px;
+  padding: 0 30 100 30;
+}
+
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.fieldset img {
-  width: 100px;
-  height: auto;
+.footerArticle img{
+  margin-bottom: 15px;
+  width: 60px;
+  height: 18px;
+  cursor: pointer;
 }
 
-.projectsSecton {
-  display: block;
+.footerArticle address {
+  color: #6b708d;
+  font-size: 1em;
+  line-height: 24px;
 }
 
-.projectsSecton-wrapper {
+.footerLinks {
+  font-size: small;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-} */
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  margin-top: 30px;  
+  margin-bottom: 20px;
+}
 
+.footerLinks a {
+  text-decoration: none;
+  color: #5e6068;
+}
 
-/* PROJECT SECTION */
+.footerLinks a:hover {
+  text-decoration: none;
+  color: #292E47;
+}
 
+/* FOOTER SECTION    end -- mobile -- */
+/* -----------------------------*/
 /*---------------------*/
 /* --- media query --- */
 /*---------------------*/
 /*    SCREEN   @ */
 @media (min-width: 1024px) {
 
-  /*    HEADER   @ */  
-header { /*    listo   @ */ 
-  margin-top: 40px;
-  width: 95vw;
-  padding: 60px 200px 0 200px;
-}
+  /*    HEADER   @ */
+  header {
+    /*    listo   @ */
+    margin: 0 200px;
+  }
 
-/*    NAVBAR   @ */ 
-#nav-bar { /*    listo   @ */ 
-  position: static;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: #f2f4fc;
-  top: 0;
-  width: 100%;
-  margin: auto;
-  margin-left: 30px;
-  transition: 0s;
-  height: auto;
-}
+  /*    NAVBAR   @ */
+  #nav-bar {
+    /*    listo   @ */
+    position: static;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #f2f4fc;
+    top: 0;
+    width: 100%;
+    margin: auto;
+    margin-left: 30px;
+    transition: 0s;
+    height: auto;
+  }
 
-.navMenu { /*    listo   @ */ 
-  display: flex;
-  gap: 60px;  
-}
+  .navMenu {
+    /*    listo   @ */
+    display: flex;
+    gap: 60px;
+  }
 
-.menu { /*    listo   @ */ 
-  margin: auto;
+  .menu {
+    /*    listo   @ */
+    margin: auto;
 
-}
+  }
 
-.contactUs { /*    listo   @ */ 
-  display: block;
-  transition: 0.5s;
-  background-color: #072ac8;
-  color: #f2f4fc;
-  font-size: 1em;
-  padding: 10px 15px;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
-  width: 150px;
+  .contactUs {
+    /*    listo   @ */
+    display: block;
+    transition: 0.5s;
+    background-color: #072ac8;
+    color: #f2f4fc;
+    font-size: 1em;
+    padding: 10px 15px;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    width: 150px;
   }
 
 
-/*    MAIN   @ */
-main {/*    listo   @ */ 
-  width: 95vw;
-  margin: auto;
+  /*    MAIN   @ */
+  main {
+    /*    listo   @ */
+    width: 95vw;
+    margin: auto;
+  }
+
+  /*    HERO SECTION  @  */
+  .heroSection {
+    /*    listo   @ */
+    padding: 60px 200px 0 200px;
+  }
+
+  .heroContainer {
+    /*    listo   @ */
+    align-items: center;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .heroTitle h1 {
+    /*    listo   @ */
+    text-align: left;
+  }
+
+  .heroTitle {
+    /*    listo   @ */
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+  }
+
+  .heroParagraph {
+    /*    listo   @ */
+    width: auto;
+    font-size: 1.25em;
+    text-align: left;
+    padding-right: 50px;
+  }
+
+  .meetUs {
+    /*    listo   @ */
+    flex-direction: row;
+    justify-content: left;
+    align-items: left;
+    align-self: flex-start;
+  }
+
+  .heroImage {
+    /*    listo   @ */
+    width: 400px;
+  }
+
+  .card1 {
+    /*    listo   @ */
+    top: 185px;
+    display: block;
+    width: 250px;
+    height: auto;
+    position: absolute;
+    right: 435px;
+  }
+
+  .card2 {  /*    listo   @ */
+    top: 495px;
+    display: block;
+    width: 205px;
+    height: auto;
+    position: absolute;
+    bottom: -100px;
+    right: 210px;
+  }
+
+  .getInTouchButton {  /*    listo   @ */
+    margin-right: 50px;
+    display: block;
+    transition: 0.5s;
+    font-size: 1em;
+    padding: 10px 15px;
+  }
+
+  .seeOurWorkButton { /*    listo   @ */
+    margin-bottom: 16px;
+  }
+
+  .clientSection { /*    listo   @ */
+    padding: 60px 200px 0 200px;
+  }
+
+  .logosContainer img { /*    listo   @ */
+    width: 80px;
+    height: auto;
+    margin: 0 30px 0 30px;
+
+  }
+
+  .logosContainer {  /* @ */
+    gap: 30px;
+  }
+  /*      HERO SECTION    @ end */
+  /*      PROJECT SECTION    @ ini */
+
+  .articlesContainer {
+    display: grid;
+    grid-auto-flow: row;  
+    gap: 20px;
+    grid-template-columns: 31% 31% 31%;
+  }
+
+  .projectSection {
+    margin-top: 100px;
+    padding: 0px 200px 0 200px;
+  }
+  
+  .styleImg {
+    width: 100%;
+    height: 180px;
+  }
+
+  .paragrahP {
+    line-height: 1px;
+  }
+
+  .styleImg {
+    line-height: 1px;
+  }
+
+  .learnMore{
+    font-size: small;
+    line-height: 1px;
+  }
+
+  /*      PROJECT SECTION    @ end */
+  /*      SERVICES SECTION    @ ini */
+
+.paragrahk {
+  width: 85%;
+  font-size: small;
+  height: 60px; 
 }
 
-/*    HERO SECTION  @  */
-.heroSection, .heroSection { /*    listo   @ */ 
-  padding: 60px 200px 0 200px;
-}
-.heroContainer { /*    listo   @ */ 
-  align-items: center;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-}
-.heroTitle h1 {/*    listo   @ */ 
-  text-align: left;
-}
-.heroTitle { /*    listo   @ */ 
-  display: flex;
-  justify-content: left;
-  flex-direction: column;
-  align-items: left;
-  text-align: left;
-}
-.heroParagraph { /*    listo   @ */ 
-  width: auto;
-  font-size: 1.25em;
-  text-align: left;
-  padding-right: 50px;
-}
-.meetUs { /*    listo   @ */ 
-  flex-direction: row;
-  justify-content: left;
-  align-items: left;
-  align-self: flex-start;
-}
-.heroImage { /*    listo   @ */ 
-  width: 400px;
-}
-h1 { /*pendiente  OJO */
-  font-size:
-}
-.card1 { /*    listo   @ */ 
-  top: 210px;
-  display: block;
-  width: 250px;
-  height: auto;
-  position: absolute;
-  right: 430px;
+
+  /*      SERVICES SECTION    @ end */
+  /*      TESTIMONIAL SECTION    @ ini */
+
+.testimonialSection {
+  margin-top: 100px;
+  position: relative;
 }
 
-.card2 { /*    listo   @ */ 
-  top: 540px;
-  display: block;
-  width: 205px;
-  height: auto;
-  position: absolute;
-  bottom: -100px;
-  right: 180px;
-}
-
-.getInTouchButton { /*    listo   @ */ 
-  margin-right: 50px; 
-  display: block;
-  transition: 0.5s;
-  font-size: 1em;
-  padding: 10px 15px;
-}
-
-.seeOurWorkButton { /*    listo   @ */ 
-  margin-bottom: 16px;
-}
-
-.clientSection { /*    listo   @ */ 
-  padding: 60px 200px 100px 200px;
-}
-
-.logosContainer img { /*    listo   @ */ 
+ .emoji1 {
   width: 100px;
-  height: auto;
-  margin: 0 30px 0 30px;
+  height: 100px;
+  display: block;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+ }
+
+ .emoji2 {
+  width: 100px;
+  height: 100px;
+  display: block;
+  position: absolute;
+  left: 10%;
+  bottom: 10%;
+ }
+
+ .emoji3 {
+  width: 100px;
+  height: 100px;
+  display: block;
+  position: absolute;
+  right: 10%;
+  top: 10%;
+ }
+
+ .emoji4 {
+  width: 100px;
+  height: 100px;
+  display: block;
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+ }
+
+  
+  /*      TESTIMONIAL    @ end */
+
+    /*     CTA    @ ini */
+
+ .anyQuestion {
+  font-size: 1.2em;
+ }
+
+ .content {
+  display: flex;
+  flex-direction: row;
+ }
+
+#submit {
+  margin-top: 0;
+  margin-left: 20px;
 }
 
-/*      PROJECT SECTION    @ ini */
-
-.projectsSecton {
-  padding: 60px 200px 0 200px;
-
+.envelopIcon {
+  width: 30px;
+  height: 35px;
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  right: auto;
+  bottom: auto; 
 }
 
-.boxContainer {
-  width: 100%;
-  height: auto;
-  padding: 0 30px;
-  margin-top: 100px 0 100px 0;
+   /*      CTA    @ end */
+  /*   FOOTER SECTION ini   */
+.footerSection {
+  margin-top: 60px;
+  padding: 0 200px 100px 200px;
 }
+ .footerContainer {
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: left;
+  padding: 0 10px;
+ }
+ 
+ .footerArticle {
+  width: 40%;
+ }
 
-.recentProjects {
-  padding: 50px;
-}
+ .footerLinks {
+  margin-top: 0px;
+  align-self: flex-end;
+  row-gap: 50px;
+ }
 
-.textH2 {
 
-}
+    /*   FOOTER SECTION end   */
 
-.articlesContainer {
-  display: grid;
-  gap: 10px;
-  margin: 20px 180px;
-  grid-template-areas: '. . .';
-}
 
-.articleDetails{
-  text-align: center;
-}
 
-.imgSize {
-  width: 250px;
-  height: 200px;
-}
 
-.textH3 {
-  color: #4a5551;
-  font-size: x-large;
-  font-family: 'Roboto', sans-serif;
-}
 
-.textSize {
-  font-family: 'Roboto', sans-serif;
-  font-size: large;
-}
 
-.learnMore {
+
 
 }
-
-
-/*      PROJECT SECTION    @ end */
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
